Remove duplicate status message area in profile.html and ensure its presence for showStatusMessage functionality, enhancing user feedback and content visibility.

--- a/public/profile.html
+++ b/public/profile.html
@@ -70,6 +70,9 @@
         </div>
     </nav>
 
+    <!-- Status Message Area (must exist for showStatusMessage) -->
+    <div id="status-message-area" class="fixed top-20 right-4 z-50"></div>
+
     <!-- Profile Content -->
     <div class="container mx-auto p-4 md:p-8 max-w-6xl">
         <div id="profile-content" class="hidden">
@@ -87,9 +90,6 @@
         </div>
     </div>
 
-    <!-- Status Message Area -->
-    <div id="status-message-area" class="fixed top-20 right-4 z-50"></div>
-    
     <!-- Modals Container -->
     <div id="modal-container" class="relative z-40"></div>
 
