--- a/public/profile.html
+++ b/public/profile.html
@@ -193,6 +193,7 @@
             // --- Helper Functions ---
             function showStatusMessage(message, type = 'success') {
                 const statusMessageArea = document.getElementById('status-message-area');
+                if (!statusMessageArea) return;
                 const messageDiv = document.createElement('div');
                 messageDiv.className = `status-message p-4 rounded-lg shadow-lg font-medium mb-2 ${type === 'error' ? 'bg-red-100 text-red-800 border border-red-200' : 'bg-green-100 text-green-800 border border-green-200'}`;
                 messageDiv.textContent = message;
