Fix loader text assignment in profile.html by ensuring the element is retrieved before updating its content. This improves code robustness and prevents potential errors during data initialization.

--- a/public/profile.html
+++ b/public/profile.html
@@ -1137,7 +1137,8 @@
             async function initializeDefaultData() {
                 debugLog('initializeDefaultData called');
                 try {
-                    loaderText.textContent = 'Setting up your data...';
+                    const loaderText = document.getElementById('loader-text');
+                    if (loaderText) loaderText.textContent = 'Setting up your data...';
                     const hospitals = await loadListFromFile('hospitals');
                     const ambulance = await loadListFromFile('ambulance');
                     debugLog('Loaded hospitals and ambulance', { hospitalsLen: hospitals?.length, ambulanceLen: ambulance?.length });
