--- a/public/profile.html
+++ b/public/profile.html
@@ -374,14 +374,20 @@
                     ${debugSummary}
                     <!-- Profile Header and Stats Grid -->
                     <div id="profile-header-and-stats"></div>
+                    <!-- Add Record Button (main content area) -->
+                    <div class="flex justify-end mb-4">
+                        <button id="add-record-btn-main" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors font-semibold shadow">
+                            + Add Record
+                        </button>
+                    </div>
                     <!-- Tabs -->
                     <div class="bg-white rounded-xl shadow-md">
                         <div class="border-b border-gray-200">
                             <nav class="-mb-px flex space-x-8 px-6" id="profile-tabs">
-                                <button class="profile-tab-btn border-purple-500 text-purple-600 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="history">Visit History</button>
-                                <button class="profile-tab-btn border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="records">Medical Records</button>
-                                <button class="profile-tab-btn border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="achievements">Achievements</button>
-                                <button class="profile-tab-btn border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="analytics">Analytics</button>
+                                <button class="profile-tab-btn border-purple-500 text-purple-600 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="history">Visits</button>
+                                <button class="profile-tab-btn border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="records">Records</button>
+                                <button class="profile-tab-btn border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="achievements">Awards</button>
+                                <button class="profile-tab-btn border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="analytics">Insights</button>
                                 <button class="profile-tab-btn border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" data-tab="symptoms">Symptoms</button>
                             </nav>
                         </div>
@@ -390,6 +396,11 @@
                         </div>
                     </div>
                 `;
+                // Add event listener for the new Add Record button
+                const addRecordBtnMain = document.getElementById('add-record-btn-main');
+                if (addRecordBtnMain) {
+                    addRecordBtnMain.addEventListener('click', showAddRecordModal);
+                }
                 renderProfileHeader();
             }
 
